Bug 251501 - bhyve: -G option doesn't work on FreeBSD 12.2-RELEASE
Summary: bhyve: -G option doesn't work on FreeBSD 12.2-RELEASE
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bhyve (show other bugs)
Version: 12.2-RELEASE
Hardware: Any Any
: --- Affects Some People
Assignee: freebsd-virtualization (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-01 03:28 UTC by Yuichiro NAITO
Modified: 2020-12-02 23:17 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuichiro NAITO 2020-12-01 03:28:30 UTC
It works on CURRENT.
I want r355686 to be MFCed.
I can confirm r355686 works for me.

https://svnweb.freebsd.org/base?view=revision&revision=355686
Comment 1 commit-hook freebsd_committer freebsd_triage 2020-12-02 23:16:52 UTC
A commit references this bug:

Author: jhb
Date: Wed Dec  2 23:16:25 UTC 2020
New revision: 368289
URL: https://svnweb.freebsd.org/changeset/base/368289

Log:
  MFC 355686: Fix a mismerge in r355683 and remove the local gdb_port from main.

  PR:		251501
  Reported by:	Yuichiro NAITO <naito.yuichiro@gmail.com>

Changes:
_U  stable/12/
  stable/12/usr.sbin/bhyve/bhyverun.c
Comment 2 John Baldwin freebsd_committer freebsd_triage 2020-12-02 23:17:14 UTC
Oops, thanks.  I hadn't tagged the fix with an MFC after reminder.