MFC 355686: Fix a mismerge in r355683 and remove the local gdb_port from main.

PR:		251501
Reported by:	Yuichiro NAITO <naito.yuichiro@gmail.com>